--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ nav .top-section{
     align-items: center;
     background: #181a1e;
     transition: .3s;
+    z-index: 4;
 }
 nav .top-section::before,
 nav .top-section::after{
@@ -45,6 +46,7 @@ nav .top-section::after{
     width: 25px;
     height: 25px ;
     background: #181a1e;
+    transition: .3s;
 }
 nav .top-section::after{
     border-top-left-radius: 50%;
@@ -65,6 +67,7 @@ nav .top-section::after{
 .top-section .sec-one .logo{
     font-size: 1.5em;
     font-weight: 900;
+    transition: .2s;
 }
 .top-section .sec-one .logo a{
     display: flex;
@@ -81,6 +84,7 @@ nav .top-section::after{
     height: 35px;
     border-radius: 25px;
     background: var(--default-bg);
+    transition: .2s;
 }
 .top-section .sec-one form input{
     border: none;
@@ -95,7 +99,7 @@ nav .top-section::after{
     padding: 0 10px;
     color: inherit;
     font-size: 1em;
-
+    
 }
 .top-section .sec-one form button{
     border: none;
@@ -187,12 +191,16 @@ nav .side-section{
     background: #ffffff3f;
     transition: 0s;
 }
-.side-section ul{
+  .side-section ul{
+    position: relative;
+    top: 0;
     height: 90%;
+    width: 100%;
     padding: 20px 0 10px 7px;
     overflow: hidden;
     display: flex;
     flex-direction: column;
+    transition: .3s;
 }
 .side-section ul li,
 .side-section .bottom{
@@ -202,29 +210,35 @@ nav .side-section{
     padding: 5px 10px;
     gap: 20px;
     cursor: pointer;
-    border-radius: 15px 0 0 15px;
-    transition: .2s;
+    border-radius: 15px;
+    width: 100%;
+    outline: 3px solid transparent;
+    transition: .3s;
 }
 .side-section ul li:hover{
-    background: var(--default-bg);
+    background: inherit;
+    outline: 5px solid var(--default-bg);
 }
 .side-section ul li:hover::before,
 .side-section ul li:hover::after{
     content: "";
     position: absolute;
-    top: -14px;
-    right: -1px;
+    top: -20px;
+    right: 0;
     width: 15px;
     height: 15px;
     border-radius: 50%;
     box-shadow: 5px 5px var(--default-bg);
+    transition: 0s;
 }
 .side-section ul li:hover::after{
     box-shadow: 5px -5px var(--default-bg);
-    top: 100%;
+    top: auto;
+    bottom: -20px;
 }
 .side-section .bottom{
     padding: 15px;
+    color: rgb(240, 57, 94);
     overflow: hidden;
 }
 
@@ -234,8 +248,9 @@ nav .side-section{
 nav.active .side-section{
     width: 200px;
 }
-nav.active .top-section{
-    width: calc(100% - 200px);
+nav.active .top-section::before,
+nav.active .top-section::after{
+    left: 140px;
 }
 
 /* ! Media query */
@@ -265,7 +280,9 @@ nav.active .top-section{
         min-width: 100px;
     }
     .top-section .sec-one .logo{
-        font-size: 1.1em;
+        font-size: 1em;
+        font-weight: 900;
+        transition: .2s;
     }
     .top-section .sec-one form{
         position: absolute;
@@ -273,6 +290,18 @@ nav.active .top-section{
         left: 50%;
         transform: translate(-50%);
         border: 1px solid #fff;
+        background: #181a1e;
+        transition: .2s;
         z-index: 2;
+    }
+    nav.active .side-section ul{
+        position: relative;
+        top: 40px;
+        height: 90%;
+        width: 100%;
+        padding: 20px 0 10px 7px;
+        overflow: hidden;
+        display: flex;
+        flex-direction: column;
     }
 }
